Test fix for inconsistent font size on iPhones.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -313,3 +313,7 @@ body {
         text-align: right;
     }
 }
+
+@media only screen and (max-device-width: 480px) {      
+    td#main_box { -webkit-text-size-adjust:100% }               
+}
